tests/baselines/reference/computedPropertyNames19_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames19_ES5.ts(3,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames19_ES5.ts(3,10): error TS2331: 'this' cannot be referenced in a module body.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames19_ES5.ts (2 errors) ====
    module M {
        var obj = {
            [this.bar]: 0
            ~~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
             ~~~~
!!! error TS2331: 'this' cannot be referenced in a module body.
        }
    }